# fastapi-demo

./: README.md  pyproject.toml
api/: dependencies.py  main.py  models.py  pyproject.toml  router.py
api/api/: __init__.py  main.py  models.py  repository.py  router.py
api/tests/: test_nothing.py
client/: pyproject.toml
