[tool.poetry]
name = "api"
version = "0.1.0"
description = "FastAPI Demo"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^0.991"
pytest = "^7.2.1"
httpie = "^3.2.1"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
